// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MovieCard > snapshot > matches snapshot with all props 1`] = `
<a
  aria-label="Fight Club (1999) — rated 8.4"
  class="group block overflow-hidden rounded-lg bg-gray-900 ring-1 ring-gray-800 transition-all duration-200 hover:ring-gray-600 hover:scale-[1.02] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white"
  href="/movies/550"
>
  <div
    class="relative aspect-2/3 w-full overflow-hidden bg-gray-800"
  >
    <img
      alt="Fight Club poster"
      data-priority="false"
      data-testid="movie-image"
      src="https://image.tmdb.org/t/p/w500/pB8BM7pdSp6B6Ih7QZ4DrQ3PmJK.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute bottom-2 right-2 flex items-center gap-1 rounded-md bg-gray-950/80 px-1.5 py-0.5 backdrop-blur-sm"
    >
      <svg
        aria-hidden="true"
        class="h-3 w-3 text-yellow-400"
        fill="currentColor"
        viewBox="0 0 20 20"
      >
        <path
          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
        />
      </svg>
      <span
        class="text-xs font-semibold text-green-400"
      >
        8.4
      </span>
    </div>
  </div>
  <div
    class="p-3 space-y-1.5"
  >
    <h2
      class="line-clamp-2 text-sm font-semibold leading-snug text-white group-hover:text-gray-200"
    >
      Fight Club
    </h2>
    <p
      class="text-xs text-gray-400"
    >
      1999
    </p>
    <ul
      aria-label="Genres"
      class="flex flex-wrap gap-1.5"
    >
      <li
        class="rounded-full bg-gray-800 px-2 py-0.5 text-xs text-gray-300"
      >
        Action
      </li>
      <li
        class="rounded-full bg-gray-800 px-2 py-0.5 text-xs text-gray-300"
      >
        Adventure
      </li>
    </ul>
  </div>
</a>
`;

exports[`MovieCard > snapshot > matches snapshot with null posterPath 1`] = `
<a
  aria-label="Fight Club (1999) — rated 8.4"
  class="group block overflow-hidden rounded-lg bg-gray-900 ring-1 ring-gray-800 transition-all duration-200 hover:ring-gray-600 hover:scale-[1.02] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white"
  href="/movies/550"
>
  <div
    class="relative aspect-2/3 w-full overflow-hidden bg-gray-800"
  >
    <img
      alt="Fight Club — no poster available"
      data-priority="false"
      data-testid="movie-image"
      src="/images/poster-fallback.svg"
    />
    <div
      aria-hidden="true"
      class="absolute bottom-2 right-2 flex items-center gap-1 rounded-md bg-gray-950/80 px-1.5 py-0.5 backdrop-blur-sm"
    >
      <svg
        aria-hidden="true"
        class="h-3 w-3 text-yellow-400"
        fill="currentColor"
        viewBox="0 0 20 20"
      >
        <path
          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
        />
      </svg>
      <span
        class="text-xs font-semibold text-green-400"
      >
        8.4
      </span>
    </div>
  </div>
  <div
    class="p-3 space-y-1.5"
  >
    <h2
      class="line-clamp-2 text-sm font-semibold leading-snug text-white group-hover:text-gray-200"
    >
      Fight Club
    </h2>
    <p
      class="text-xs text-gray-400"
    >
      1999
    </p>
    <ul
      aria-label="Genres"
      class="flex flex-wrap gap-1.5"
    >
      <li
        class="rounded-full bg-gray-800 px-2 py-0.5 text-xs text-gray-300"
      >
        Action
      </li>
      <li
        class="rounded-full bg-gray-800 px-2 py-0.5 text-xs text-gray-300"
      >
        Adventure
      </li>
    </ul>
  </div>
</a>
`;
